<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_show_calculation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0F1311"
        android:padding="@dimen/extra_padding"
        android:gravity="end"
        android:paddingEnd="24dp"
        android:textIsSelectable="true"
        android:paddingStart="24dp"
        tools:text="2134"
        android:maxLines="2"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size_calc_24"
        app:layout_constraintBottom_toTopOf="@+id/tv_display_answer"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/tv_display_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/extra_margin"
        android:background="#0F1311"
        android:gravity="end|center_vertical"
        android:padding="@dimen/extra_padding"
        tools:text="2134"
        android:textIsSelectable="true"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:textColor="@color/textColor"
        android:maxLines="2"
        android:textSize="@dimen/text_size_calc_36sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        tools:layout_editor_absoluteX="8dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/black"
        app:cardElevation="4dp"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/extra_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/standard_margin"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_c"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:padding="@dimen/padding_btn"
                    android:text="@string/c"
                    android:onClick="clearField"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/btn_percent"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:padding="@dimen/padding_btn"
                    android:text="@string/percent"
                    android:onClick="getData"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/btn_divide"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:padding="@dimen/padding_btn"
                    android:text="@string/divide"
                    android:onClick="getData"
                    android:textSize="28sp" />

                <LinearLayout
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin">

                    <Button
                        android:id="@+id/btn_delete"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:onClick="deleteSingle"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="6dp"
                        android:background="@drawable/delete_text_svgrepo_com" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/standard_margin"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_7"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:backgroundTint="@color/textColor"
                    android:padding="@dimen/padding_btn"
                    android:text="@string/_7"
                    android:onClick="getData"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/btn_8"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:backgroundTint="@color/textColor"
                    android:padding="@dimen/padding_btn"
                    android:text="@string/_8"
                    android:onClick="getData"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/btn_9"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:backgroundTint="@color/textColor"
                    android:padding="@dimen/padding_btn"
                    android:text="@string/_9"
                    android:onClick="getData"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/btn_multiply"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:padding="@dimen/padding_btn"
                    android:text="@string/x"
                    android:onClick="getData"
                    android:textSize="28sp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/standard_margin"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_4"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:backgroundTint="@color/textColor"
                    android:padding="@dimen/padding_btn"
                    android:text="@string/_4"
                    android:onClick="getData"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/btn_5"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:backgroundTint="@color/textColor"
                    android:padding="@dimen/padding_btn"
                    android:text="@string/_5"
                    android:onClick="getData"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/btn_6"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:backgroundTint="@color/textColor"
                    android:padding="@dimen/padding_btn"
                    android:text="@string/_6"
                    android:onClick="getData"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/btn_minus"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:padding="@dimen/padding_btn"
                    android:text="@string/minus"
                    android:onClick="getData"
                    android:textSize="28sp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/standard_margin"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_1"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:backgroundTint="@color/textColor"
                    android:padding="@dimen/padding_btn"
                    android:text="@string/_1"
                    android:onClick="getData"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/btn_2"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:backgroundTint="@color/textColor"
                    android:padding="@dimen/padding_btn"
                    android:text="@string/_2"
                    android:onClick="getData"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/btn_3"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:backgroundTint="@color/textColor"
                    android:padding="@dimen/padding_btn"
                    android:text="@string/_3"
                    android:onClick="getData"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/btn_plus"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:padding="@dimen/padding_btn"
                    android:text="@string/plus"
                    android:onClick="getData"
                    android:textSize="28sp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/standard_margin"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_dot"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:padding="@dimen/padding_btn"
                    android:text="@string/dot"
                    android:onClick="getData"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/btn_0"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:backgroundTint="@color/textColor"
                    android:padding="@dimen/padding_btn"
                    android:text="@string/_0"
                    android:onClick="getData"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/btn_brackets"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:padding="@dimen/padding_btn"
                    android:text="@string/brackets"
                    android:onClick="getData"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/btn_equal"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin"
                    android:padding="@dimen/padding_btn"
                    android:text="@string/equal"
                    android:onClick="solveEquation"
                    android:textSize="28sp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>